--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="not_have_account">Belum punya akun?</string>
     <string name="have_account">Sudah punya akun?</string>
     <string name="login">Login</string>
-
+    <string name="title_login">Selamat Datang &#xD;&#xA; Kembali</string>
     <string name="title_menu_1">Organeco</string>
     <string name="title_menu_2">GHG emissions</string>
     <string name="title_menu_3">Recycle Compose</string>
@@ -18,4 +18,6 @@
     <string name="desc_menu_4">"Ubah praktik pertanianmu dan perkebunanmu, kurangi dampak negatif, dan beralih ke pupuk ramah lingkungan dengan aplikasi ini!"</string>
     <string name="get_started">Get Started</string>
     <string name="guest">Guest</string>
+    <string name="Login_error">please check again</string>
+    <string name="Login_form_error">Invalid form</string>
 </resources>
