--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,11 @@
     <string name="desc_menu_3">Aplikasi rekomendasi pupuk ramah lingkungan adalah sebuah aplikasi yang dirancang untuk membantu petani dan individu yang terlibat dalam pertanian dalam menggunakan pupuk yang ramah lingkungan.</string>
     <string name="desc_menu_4">"Ubah praktik pertanianmu dan perkebunanmu, kurangi dampak negatif, dan beralih ke pupuk ramah lingkungan dengan aplikasi ini!"</string>
     <string name="learn_now">Get Started</string>
+
+    <string name="selected_item">Selected item:</string>
+    <string-array name="Jenis_tanah">
+        <item>tanah 1</item>
+        <item>tanah 2</item>
+        <item>tanah 3</item>
+    </string-array>
 </resources>
