--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,7 @@
     <string name="Login_error">please check again</string>
     <string name="Login_form_error">Invalid form</string>
     <string name="password_error">Pssword kurang dari 6 karakter</string>
+    <string name="logout">logout</string>
+    <string name="profile">Profile</string>
+
 </resources>
