--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">Organeco</string>
     <string name="register">Register</string>
-    <string name="name">Name</string>
+    <string name="name">Nama</string>
+    <string name="name_account">Nama Akun</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="not_have_account">Belum punya akun?</string>
@@ -23,6 +24,8 @@
     <string name="password_error">Pssword kurang dari 6 karakter</string>
     <string name="logout">Logout</string>
     <string name="profile">Profile</string>
+    <string name="calculator">Calculator Pupuk</string>
+
 
     <string name="selected_item">Selected item:</string>
     <string-array name="Jenis_tanah">
@@ -30,5 +33,13 @@
         <item>tanah 2</item>
         <item>tanah 3</item>
     </string-array>
-    
+    <string name="title_activity_navigation">NavigationActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="calculator_fertilizer">Kalkulator Pupuk</string>
+    <string name="recommended_fetilizer">Rekomendasi Pupuk</string>
+
 </resources>
