--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,8 +14,8 @@
     <string name="title_menu_3">Recycle Compose</string>
     <string name="title_menu_4">Optimize Your Farming Practices!"</string>
     <string name="desc_menu_1">Organeco, aplikasi inovatif untuk petani atau pengkebun, memberikan rekomendasi pupuk ramah lingkungan melalui analisis tanah dan panduan penggunaan pupuk organik.</string>
-    <string name="desc_menu_2">Belajar kapan pun, di mana pun, secara mandiri. Bebas memilih kelas sesuai minat belajar. Akses seumur hidup ke kelas dan forum diskusi setelah lulus.</string>
-    <string name="desc_menu_3">Aplikasi rekomendasi pupuk ramah lingkungan adalah sebuah aplikasi yang dirancang untuk membantu petani dan individu yang terlibat dalam pertanian dalam menggunakan pupuk yang ramah lingkungan.</string>
+    <string name="desc_menu_2">Dapat membuat suatu metode atau teknik penggunaan pupuk organik yang tidak menghasilkan gas emisi yang merugikan lingkungan.</string>
+    <string name="desc_menu_3">Aplikasi yang dirancang untuk membantu petani dan individu yang terlibat dalam pertanian dalam menggunakan pupuk yang ramah lingkungan.</string>
     <string name="desc_menu_4">"Ubah praktik pertanianmu dan perkebunanmu, kurangi dampak negatif, dan beralih ke pupuk ramah lingkungan dengan aplikasi ini!"</string>
     <string name="get_started">Get Started</string>
     <string name="guest">Guest</string>
@@ -38,5 +38,11 @@
         <item>tanaman 2</item>
         <item>tanaman 3</item>
     </string-array>
+
+    <integer-array name="data_image">
+        <item>@drawable/slide1</item>
+        <item>@drawable/slide2</item>
+        <item>@drawable/slide3</item>
+    </integer-array>
 
 </resources>
