--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,10 +29,39 @@
     <string name="password_error">Pssword kurang dari 6 karakter</string>
     <string name="logout">Logout</string>
     <string name="profile">Profile</string>
-    <string name="calculator">Calculator Pupuk</string>
     <string name="calculator_fertilizer">Kalkulator Pupuk</string>
     <string name="recommended_fetilizer">Rekomendasi Pupuk</string>
     <string name="selected_item">Selected item:</string>
+    <string name="arrow_back">Panah Kembali</string>
+    <string name="temperature">Suhu</string>
+    <string name="humidity">Kelembapan Udara</string>
+    <string name="moisture">Kelembaban Tanah</string>
+    <string name="soil_type">Tipe Tanah</string>
+    <string name="potasium">Potasium</string>
+    <string name="phosphorous">Phosphorous</string>
+    <string name="count">Hitung</string>
+    <string name="plant_type">Tipe Tanaman</string>
+    <string name="nitrogen">Nitrogen</string>
+    <string name="detail_fertilizer">Detail Pupuk</string>
+    <string name="detail_img_fertilizer">Detail Gambar Pupuk</string>
+    <string name="name_plant">Nama Tanaman</string>
+    <string name="plante_type_detail">Jenis Tanaman :</string>
+    <string name="vegetable">Sayuran</string>
+    <string name="description_detail">Deskripsi :</string>
+    <string name="button_share">Tombol Button Share Content</string>
+    <string name="logo_organeco">Logo Organeco</string>
+    <string name="halo">Halo,</string>
+    <string name="fertilizer_that_is_often_used">Pupuk yang sering dipakai</string>
+    <string name="iot_moisture">IoT Kelembaban</string>
+    <string name="send_to_calculator">Kirim Data ke Kalkulator</string>
+    <string name="emission_gas">Emisi Gas</string>
+    <string name="friendly_fertilizer">Pupuk Ramah Lingkungan</string>
+    <string name="agricultural_practices">Praktik Pertanian</string>
+    <string name="background_plant">Background Tanaman</string>
+    <string name="icon_profile">icon profile</string>
+    <string name="icon_email">icon Email</string>
+    <string name="photo_fertilizer">photo fertilizer</string>
+    <string name="slider_fertilizer">Slider Pupuk</string>
     <string-array name="Jenis_tanah">
         <item>tanah 1</item>
         <item>tanah 2</item>
