--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,17 @@
     <string name="icon_email">icon Email</string>
     <string name="photo_fertilizer">photo fertilizer</string>
     <string name="slider_fertilizer">Slider Pupuk</string>
+    <string name="cek_kelayakan_subsidi_pupuk">Cek Kelayakan Subsidi Pupuk</string>
+    <string name="npk">NPK</string>
+    <string name="urea">Urea</string>
+    <string name="luas_lahan_m_sup_2_sup">Luas Lahan (M<sup>2</sup>)</string>
+    <string name="check_subsidi">Cek Subsidi</string>
+    <string name="fertilizer_type">Jenis Pupuk</string>
+    <string name="farmer_group">Termasuk dalam Kelompok Tani</string>
+    <string name="farmer_card">Mempunyai kartu Tani</string>
+    <string name="number_moisture">45.90980</string>
+    <string name="result_calculate">Hasil Kalulator</string>
+
     <string-array name="Jenis_tanah">
         <item>Sandy</item>
         <item>Loamy</item>
@@ -82,6 +93,18 @@
         <item>Oil Seeds</item>
         <item>Pulses</item>
         <item>Ground Nuts</item>
+    </string-array>
+
+    <string-array name="Jenis_Komoditas">
+        <item>Padi</item>
+        <item>Jagung</item>
+        <item>Kedelai</item>
+        <item>Cabai</item>
+        <item>Bawang Merah</item>
+        <item>Bawang Putih</item>
+        <item>Kopi</item>
+        <item>Tebu</item>
+        <item>Kakao</item>
     </string-array>
 
 </resources>
