UI Done sepertinya

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,7 +71,7 @@
     <string name="farmer_group">Termasuk dalam Kelompok Tani</string>
     <string name="farmer_card">Mempunyai kartu Tani</string>
     <string name="number_moisture">45.90980</string>
-    <string name="result_calculate">Hasil Kalkulator</string>
+    <string name="result_recomendation">Hasil Rekomendasi</string>
     <string name="dry">60 – 100     = Kering</string>
     <string name="normal">40 – 60 = Normal</string>
     <string name="wet">0 – 39 = Basah</string>
